--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -36,3 +36,6 @@ message.sgcraft:diallingItself=Stargate cannot connect to itself
 message.sgcraft:insufficientEnergy=Stargate has insufficient energy
 message.sgcraft:malformedAddress=Malformed stargate address
 message.sgcraft:dimensionTooFar=Dimension not reachable by stargate
+
+tile.sgcraft.zero_point_module.name=ZPM Console
+item.sgcraft.zero_point_module.name=Zero Point Module
