--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -40,4 +40,4 @@ message.sgcraft:zpmNotFound=Destination address requires usage of ZPM
 message.sgcraft:zpmLowPower=ZPM lacks enough power to dial destination address
 
 tile.sgcraft.zpm_interface_cart.name=ZPM Interface Cart
-item.sgcraft.zpm.name=Zero Point Module
+item.sgcraft.zpm_item.name=Zero Point Module
