--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -39,5 +39,5 @@ message.sgcraft:dimensionTooFar=Dimension not reachable by stargate
 message.sgcraft:zpmNotFound=Destination address requires usage of ZPM
 message.sgcraft:zpmLowPower=ZPM lacks enough power to dial destination address
 
-tile.sgcraft.zpm_interface_cart.name=ZPM Interface Cart
-item.sgcraft.zpm_item.name=Zero Point Module
+tile.zpm_interface_cart.name=ZPM Interface Cart
+item.zpm_item.name=Zero Point Module
