--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -41,3 +41,4 @@ message.sgcraft:zpmLowPower=ZPM lacks enough power to dial destination address
 
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 item.sgcraft:zpm.name=Zero Point Module
+item.sgcraft:gdo.name=Handheld GDO
