--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -38,6 +38,7 @@ message.sgcraft:malformedAddress=Malformed stargate address
 message.sgcraft:dimensionTooFar=Dimension not reachable by stargate
 message.sgcraft:zpmNotFound=Destination address requires usage of ZPM
 message.sgcraft:zpmLowPower=ZPM lacks enough power to dial destination address
+message.sgcraft:reverseWormhole=Cannot travel backwards through one-way wormhole
 
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 item.sgcraft:zpm.name=Zero Point Module
