Phase 1 for Configurator.  Change how GDOItem is activated.  Started working on making Configurator values instanced instead of static across mod.
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -43,3 +43,5 @@ message.sgcraft:reverseWormhole=Cannot travel backwards through one-way wormhole
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 item.sgcraft:zpm.name=Zero Point Module
 item.sgcraft:gdo.name=Handheld GDO
+item.sgcraft:pdd.name=Personal Dialer Device
+item.sgcraft:configurator.name=Configurator
