--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -40,6 +40,7 @@ message.sgcraft:zpmNotFound=Destination address requires usage of ZPM
 message.sgcraft:zpmLowPower=ZPM lacks enough power to dial destination address
 message.sgcraft:reverseWormhole=Cannot travel backwards through one-way wormhole
 message.sgcraft:cannotDialThisGate=Cannot dial specified gate
+message.sgcraft:dialspecificaddress=This gate can only dial a specific address
 
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 item.sgcraft:zpm.name=Zero Point Module
