Changes:  - Got rid of RF Power Unit  - Added SG Power Unit since they use the built-in Forge power sub system.  - Thank @Zidane for pointing this fact out.  Now every power system should work with SGCraft that implements Forge's power system.
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -6,7 +6,7 @@ tile.sgcraft:stargateController.name=Stargate Controller
 tile.sgcraft:naquadahBlock.name=Naquadah Alloy Block
 tile.sgcraft:naquadahOre.name=Naquadah Ore
 tile.sgcraft:ic2PowerUnit.name=IC2 Stargate Power Unit
-tile.sgcraft:rfPowerUnit.name=RF Stargate Power Unit
+tile.sgcraft:sgPowerUnit.name=SG Power Unit
 tile.sgcraft:ccInterface.name=ComputerCraft Stargate Interface
 tile.sgcraft:ocInterface.name=OpenComputers Stargate Interface
 item.sgcraft:naquadah.name=Naquadah
