--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -39,7 +39,8 @@ message.sgcraft:dimensionTooFar=Dimension not reachable by stargate
 message.sgcraft:zpmNotFound=Destination address requires usage of ZPM
 message.sgcraft:zpmLowPower=ZPM lacks enough power to dial destination address
 message.sgcraft:reverseWormhole=Cannot travel backwards through one-way wormhole
-message.sgcraft:cannotDialThisGate=Cannot dial specified gate
+message.sgcraft:cannotDialToThisGate=Cannot dial specified gate
+message.sgcraft:cannotDialFromThisGate=Cannot dial out from this gate
 message.sgcraft:dialspecificaddress=This gate can only dial a specific address
 
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
