Lots of changes:  - Implement the ability to create a long-distance DHD/Stargate link.  - Hardened a lot of permissions checks.  - Added missing translation keys for user feedback.
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -42,6 +42,18 @@ message.sgcraft:reverseWormhole=Cannot travel backwards through one-way wormhole
 message.sgcraft:cannotDialToThisGate=Cannot dial specified gate
 message.sgcraft:cannotDialFromThisGate=Cannot dial out from this gate
 message.sgcraft:dialspecificaddress=This gate can only dial a specific address
+message.sgcraft:gdoPermission=Insufficient permissions.  Requires 'sgcraft.gui.gdo
+message.sgcraft:configuratorPermission=Insufficient permissions.  Requires 'sgcraft.gui.configurator
+message.sgcraft:pddPermission=Insufficient permissions.  Requires 'sgcraft.gui.pdd
+message.sgcraft:cantFindStargate=Could not detect Stargate near current position
+message.sgcraft:pddContainsAddress=PDD already contains this address
+message.sgcraft:invalidFormat=Invalid format
+message.sgcraft:insufficientGateAccessPermission=Insufficient gate access permission
+message.sgcraft:insufficientPlayerAdminAccessPermission=Insufficient player admin access permission
+message.sgcraft:insufficientPlayerAccessPermission=Insufficient player access permission
+message.sgcraft:changesSaved=Changes Saved!
+message.sgcraft:gateLocationSaved=Gate location saved in configurator!
+message.sgcraft:configuratorLink=Link to Stargate created!
 
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 item.sgcraft:zpm.name=Zero Point Module
