Implemented the ability to use the PDD and GDO from a linked DHD.  Also fixed a bunch of logic and lookup failures with player/gate access system.
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -51,6 +51,8 @@ message.sgcraft:invalidFormat=Invalid format
 message.sgcraft:insufficientGateAccessPermission=Insufficient gate access permission
 message.sgcraft:insufficientPlayerAdminAccessPermission=Insufficient player admin access permission
 message.sgcraft:insufficientPlayerAccessPermission=Insufficient player access permission
+message.sgcraft:accessSystemDeniedDestination=Unable to dial destination, gate address locked out via destination
+message.sgcraft:accessSystemDeniedOrigin=Unable to dial destination, gate address locked out to destination
 message.sgcraft:changesSaved=Changes Saved!
 message.sgcraft:gateLocationSaved=Gate location saved in configurator!
 message.sgcraft:configuratorLink=Link to Stargate created!
