--- a/src/resources/assets/sgcraft/lang/de_DE.lang
+++ b/src/resources/assets/sgcraft/lang/de_DE.lang
@@ -3,20 +3,62 @@ tile.sgcraft:stargateRing.1.name=Stargate Chevron Block
 tile.sgcraft:stargateRing.name=Stargate Ring Segment
 tile.sgcraft:stargateBase.name=Stargate Basis
 tile.sgcraft:stargateController.name=Stargate Kontroller
-tile.sgcraft:naquadahBlock.name=Naquadah Block
+tile.sgcraft:naquadahBlock.name=Naquadahlegierungs Block
 tile.sgcraft:naquadahOre.name=Naquadah Erz
 tile.sgcraft:ic2PowerUnit.name=IC2 Stargate Energieeinheit
-tile.sgcraft:rfPowerUnit.name=RF Stargate Energieeinheit
+tile.sgcraft:sgPowerUnit.name=SG Energieeinheit
 tile.sgcraft:ccInterface.name=ComputerCraft Stargate Interface
 tile.sgcraft:ocInterface.name=OpenComputers Stargate Interface
 item.sgcraft:naquadah.name=Naquadah
-item.sgcraft:naquadahIngot.name=Naquadah Barren
-item.sgcraft:sgCoreCrystal.name=Stargate Kernkrystal
-item.sgcraft:sgControllerCrystal.name=Stargate Kontrollkrystal
+item.sgcraft:naquadahIngot.name=Naquadahlegierung
+item.sgcraft:sgCoreCrystal.name=Stargate Kernkristall
+item.sgcraft:sgControllerCrystal.name=Stargate Kontrollkristall
 item.sgcraft:sgChevronUpgrade.name=Stargate Chevron Erweiterung
 item.sgcraft:sgIrisUpgrade.name=Stargate Iris Erweiterung
 item.sgcraft:sgIrisBlade.name=Stargate Iris Segment
-item.sgcraft:ic2Capacitor.name=Lächerlich-großer Speicher
+item.sgcraft:ic2Capacitor.name=Lächerlich großer Speicher
 death.attack.sgcraft:transient=%1$s wurde vom Ereignishorizont in Stücke gerissen.
 death.attack.sgcraft:iris=%1$s ist an einer Stargate Iris zermatscht.
-entity.Villager.sgcraft:tokra=Tok'ra Merchant
+entity.Villager.sgcraft:tokra=Tok'ra Händler
+itemGroup.sgcraft:sgcraft=SG Craft
+
+message.sgcraft:disconnectFirst=Verbindung trennen vor dem Abbauen
+message.sgcraft:irisAtDestination=Ziel von Iris blockiert
+message.sgcraft:incomingConnection=Eingehende Verbindung!
+message.sgcraft:selfBusy=Stargate in Benutzung
+message.sgcraft:targetBusy=Gewähltes Stargate %s ist in Benutzung
+message.sgcraft:selfOutOfRange=Koordianten dieses Stargates außerhalb der Reichweite
+message.sgcraft:targetOutOfRange=Koordianten des gewählten Stargate außerhalb der Reichweite
+message.sgcraft:unknownAddress=Kein Stargate an der Adresse %s
+message.sgcraft:selfLackChevrons=Stargate hat zu wenige Chevrons zum wählen %s
+message.sgcraft:targetLackChevrons=Ziel-Stargate hat zu wenige Chevrons zum wählen
+message.sgcraft:diallingItself=Stargate kann sich nicht mit sich selbst verbinden
+message.sgcraft:insufficientEnergy=Stargate hat unzureichende Energie
+message.sgcraft:malformedAddress=Fehlerhafte Stargate Adresse
+message.sgcraft:dimensionTooFar=Dimension nicht mit Stargate erreichbar
+message.sgcraft:zpmNotFound=Zieladresse benötigt zum anwählen ein ZPM
+message.sgcraft:zpmLowPower=ZPM hat unzureichende Energie zum anwählen der Adresse
+message.sgcraft:reverseWormhole=Entgegengesetztes Reisen durch das Wurmloch nicht möglich
+message.sgcraft:cannotDialToThisGate=Stargate kann nicht angewählt werden
+message.sgcraft:cannotDialFromThisGate=Stargate kann nicht nach draußen wählen
+message.sgcraft:dialspecificaddress=Dieses Stargate kann nur eine bestimmte Adressen erreichen.
+message.sgcraft:gdoPermission=Unzureichende Rechte. Benötigt 'sgcraft.gui.gdo
+message.sgcraft:configuratorPermission=Unzureichende Rechte. Benötigt 'sgcraft.gui.configurator
+message.sgcraft:pddPermission=Unzureichende Rechte. Benötigt 'sgcraft.gui.pdd
+message.sgcraft:cantFindStargate=Konnte kein Stargate in unmittelbarer Umgebung finden
+message.sgcraft:pddContainsAddress=Diese Adresse befindet sich bereits im PDD
+message.sgcraft:invalidFormat=Format fehlerhaft
+message.sgcraft:insufficientGateAccessPermission=Keine Rechte um auf das Stargate zuzugreifen
+message.sgcraft:insufficientPlayerAdminAccessPermission=Unzureichende Spieler-Admin Rechte um auf das Stargate zuzugreifen
+message.sgcraft:insufficientPlayerAccessPermission=Unzureichende Spieler Rechte um auf das Stargate zuzugreifen
+message.sgcraft:accessSystemDeniedDestination=Ziel kann nicht angewählt werden, Stargate Adresse vom Zielgate abgelehnt
+message.sgcraft:accessSystemDeniedOrigin=Ziel kann nicht angewählt werden, Zieladresse vom Ursprungsgate abgelehnt
+message.sgcraft:changesSaved=Änderungen gespeichert!
+message.sgcraft:gateLocationSaved=Stargatestandort vom Konfigurator gespeichert!
+message.sgcraft:configuratorLink=Verbindung zum Stargate hergestellt!
+
+tile.sgcraft:zpm_interface_cart.name= ZPM Interface Karren
+item.sgcraft:zpm.name=Zero Point Module
+item.sgcraft:gdo.name=Portables GDO
+item.sgcraft:pdd.name=Personal Dialer Device
+item.sgcraft:configurator.name=Konfigurator
