--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -53,11 +53,12 @@ message.sgcraft:insufficientPlayerAdminAccessPermission=Insufficient player admi
 message.sgcraft:insufficientPlayerAccessPermission=Insufficient player access permission
 message.sgcraft:accessSystemDeniedDestination=Unable to dial destination, gate address locked out via destination
 message.sgcraft:accessSystemDeniedOrigin=Unable to dial destination, gate address locked out to destination
-message.sgcraft:changesSaved=Changes Saved!
+message.sgcraft:changesSaved=Changes Saved!t
 message.sgcraft:gateLocationSaved=Gate location saved in configurator!
 message.sgcraft:configuratorLink=Link to Stargate created!
 
-tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
+tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cartt
+tile.sgcraft:zpm_console.name=ZPM Console
 item.sgcraft:zpm.name=Zero Point Module
 item.sgcraft:gdo.name=Handheld GDO
 item.sgcraft:pdd.name=Personal Dialer Device
