--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -57,10 +57,96 @@ message.sgcraft:changesSaved=Changes Saved!
 message.sgcraft:gateLocationSaved=Gate location saved in configurator!
 message.sgcraft:configuratorLink=Link to Stargate created!
 
-tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cartt
+tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 tile.sgcraft:zpm_console.name=ZPM Console
 item.sgcraft:zpm.name=Zero Point Module
 item.sgcraft:gdo.name=Handheld GDO
 item.sgcraft:pdd.name=Personal Dialer Device
 item.sgcraft:configurator.name=Configurator
 item.sgcraft:tollan_phase_shift_device.name=Tollan Phase Shift Device
+
+sgcraft.gui.button.gateAddressAccessList=Gate Address Access List
+sgcraft.gui.button.playerAccessList=Player Access List
+sgcraft.gui.button.loadDefaults=Load Defaults
+sgcraft.gui.button.delete=Delete
+sgcraft.gui.button.save=Save
+sgcraft.gui.button.close=Close
+sgcraft.gui.button.openIris=Open Iris
+sgcraft.gui.button.closeIris=Close Iris
+sgcraft.gui.button.reset=Reset
+sgcraft.gui.button.dialSelectedAddress=Dial Selected Address
+sgcraft.gui.button.disconnect=Disconnect
+
+sgcraft.gui.configurator.label.configurator=Configurator
+sgcraft.gui.configurator.label.numericValues=Numeric Values
+sgcraft.gui.configurator.label.secondsToStayOpen=Seconds to Stay Open
+sgcraft.gui.configurator.label.gateRotationSpeed=Gate Rotation Speed
+sgcraft.gui.configurator.label.energyBufferSize=Energy Buffer Size
+sgcraft.gui.configurator.label.energyPerNaquadah=Energy per Naquadah
+sgcraft.gui.configurator.label.openingsPerNaquadah=Openings per Naquadah
+sgcraft.gui.configurator.label.distanceFactorMultiplier=Distance Factor Multiplier
+sgcraft.gui.configurator.label.interDimensionalMultiplier=Inter-Dimensional Multiplier
+sgcraft.gui.configurator.label.accessControlSystems=Access Control Systems
+sgcraft.gui.configurator.label.booleanValue=Boolean Values
+sgcraft.gui.configurator.label.oneWayTravelOnly=One Way Travel Only
+sgcraft.gui.configurator.label.irisUpgrade=Iris Upgrade
+sgcraft.gui.configurator.label.chevronUpgrade=Chevron Upgrade
+sgcraft.gui.configurator.label.pegasusGateType=Pegasus Gate Type
+sgcraft.gui.configurator.label.reverseWormholeKills=Reverse Wormhole Kills
+sgcraft.gui.configurator.label.closeFromEitherEnd=Close from Either End
+sgcraft.gui.configurator.label.preserveInventoryOnDeath=Preserve Inventory on Iris Death
+sgcraft.gui.configurator.label.noInputPowerRequired=No Input Power Required
+sgcraft.gui.configurator.label.chevronsLockOnDial=Chevrons lock when dialed
+sgcraft.gui.configurator.label.returnToPreviousIrisState=Return to Previous Iris State
+sgcraft.gui.configurator.label.transientDamage=Transient Damage (when wormhole opens)
+sgcraft.gui.configurator.label.eventHorizonTransparency=Event Horizon Transparency
+sgcraft.gui.configurator.label.dhdAsFuelSource=Use DHD as Fuel Source
+sgcraft.gui.configurator.label.allowRedstoneOutput=Allow Redstone Output
+sgcraft.gui.configurator.label.allowRedstoneInput=Allow Redstone Input (for Iris Control)
+sgcraft.gui.configurator.label.horizontalGate=Horizontal Gate
+sgcraft.gui.configurator.label.renderFaceUp=Render Face Up
+sgcraft.gui.configurator.label.renderFaceDown=Render Face Down
+sgcraft.gui.configurator.label.gateAddress=Gate Address
+sgcraft.gui.configurator.label.gateAddressAccessList=Gate Address Access List
+sgcraft.gui.configurator.label.addressList=Address List
+sgcraft.gui.configurator.label.perAddressOptions=Per Address Options
+sgcraft.gui.configurator.label.allow=Allow
+sgcraft.gui.configurator.label.deny=Deny
+sgcraft.gui.configurator.label.incoming=Incoming
+sgcraft.gui.configurator.label.outgoing=Outgoing
+sgcraft.gui.configurator.label.defaultIncoming=Default Incoming
+sgcraft.gui.configurator.label.defaultOutgoing=Default Outgoing
+sgcraft.gui.configurator.label.address=Address
+sgcraft.gui.configurator.label.addGateAddress=Add Gate Address
+sgcraft.gui.configurator.label.editGateAddress=Edit Gate Address
+sgcraft.gui.configurator.label.deleteGateAddress=Delete Gate Address
+sgcraft.gui.configurator.label.format=Format
+sgcraft.gui.configurator.label.playerName=Player Name
+sgcraft.gui.configurator.label.addPlayer=Add Player
+sgcraft.gui.configurator.label.editPlayer=Edit Player
+sgcraft.gui.configurator.label.deletePlayer=Delete Player
+sgcraft.gui.configurator.label.playerAccessList=Player Access List
+sgcraft.gui.configurator.label.playerList=Player List
+sgcraft.gui.configurator.label.options=Options
+sgcraft.gui.configurator.label.defaultAccess=Default Accesss
+sgcraft.gui.configurator.label.defaultIris=Default Iris Access
+sgcraft.gui.configurator.label.defaultAdmin=Default Admin
+sgcraft.gui.configurator.label.access=Access
+sgcraft.gui.configurator.label.iris=Iris
+sgcraft.gui.configurator.label.admin=Admin
+sgcraft.gui.pdd.label.personalDialerDevice=Personal Dialer Device
+sgcraft.gui.pdd.label.availableAddresses=Available Addresses
+sgcraft.gui.pdd.label.warning=Don't close PDD until wormhole connects...
+sgcraft.gui.pdd.label.nameHere=Name Here
+sgcraft.gui.pdd.label.addressHere=Address Here
+sgcraft.gui.pdd.label.noLocalStargateFound=No Local Stargate Found
+sgcraft.gui.pdd.label.dialling=... Dialling ...
+sgcraft.gui.pdd.label.disconnecting=... Disconnecting ...
+sgcraft.gui.pdd.label.connected=... Connected ...
+sgcraft.gui.pdd.label.error=... Error ...
+sgcraft.gui.pdd.label.establishing=... Establishing ...
+sgcraft.gui.gdo.label.gdoController=GDO Controller
+sgcraft.gui.gdo.label.localGateControl=Local Gate Control
+sgcraft.gui.gdo.label.remoteGateControl=Remote Gate Control
+
+sgcraft.gui.zpmConsole.label.availablePower=Available Power
