More Language entries.
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -145,6 +145,13 @@ sgcraft.gui.pdd.label.disconnecting=... Disconnecting ...
 sgcraft.gui.pdd.label.connected=... Connected ...
 sgcraft.gui.pdd.label.error=... Error ...
 sgcraft.gui.pdd.label.establishing=... Establishing ...
+sgcraft.gui.pdd.label.pddEntry=PDD Entry
+sgcraft.gui.pdd.label.addPddEntry=Add PDD Entry
+sgcraft.gui.pdd.label.editPddEntry=Edit PDD Entry
+sgcraft.gui.pdd.label.deletePddEntry=Delete PDD Entry
+sgcraft.gui.pdd.label.name=Name
+sgcraft.gui.pdd.label.address=Address
+sgcraft.gui.pdd.label.index=Index
 sgcraft.gui.gdo.label.gdoController=GDO Controller
 sgcraft.gui.gdo.label.localGateControl=Local Gate Control
 sgcraft.gui.gdo.label.remoteGateControl=Remote Gate Control
