--- a/src/resources/assets/sgcraft/lang/de_DE.lang
+++ b/src/resources/assets/sgcraft/lang/de_DE.lang
@@ -57,8 +57,103 @@ message.sgcraft:changesSaved=Änderungen gespeichert!
 message.sgcraft:gateLocationSaved=Stargatestandort vom Konfigurator gespeichert!
 message.sgcraft:configuratorLink=Verbindung zum Stargate hergestellt!
 
-tile.sgcraft:zpm_interface_cart.name= ZPM Interface Karren
+tile.sgcraft:zpm_interface_cart.name=ZPM Interface Karren
+tile.sgcraft:zpm_console.name=ZPM Konsole
 item.sgcraft:zpm.name=Zero Point Module
 item.sgcraft:gdo.name=Portables GDO
 item.sgcraft:pdd.name=Personal Dialer Device
 item.sgcraft:configurator.name=Konfigurator
+item.sgcraft:tollan_phase_shift_device.name=Tollanisches Phasenverschiebungsgerät
+
+sgcraft.gui.button.gateAddressAccessList=Toradressen Zugriffsliste
+sgcraft.gui.button.playerAccessList=Spieler Zugriffsliste
+sgcraft.gui.button.loadDefaults=Lade Standartwerte
+sgcraft.gui.button.delete=Löschen
+sgcraft.gui.button.save=Speichern
+sgcraft.gui.button.close=Schließen
+sgcraft.gui.button.openIris=Iris öffnen
+sgcraft.gui.button.closeIris=Iris schließen
+sgcraft.gui.button.reset=Zurücksetzen
+sgcraft.gui.button.dialSelectedAddress=Gewählte Adresse wählen
+sgcraft.gui.button.disconnect=Verbindung Trennen
+
+sgcraft.gui.configurator.label.configurator=Konfigurator
+sgcraft.gui.configurator.label.numericValues=Numerische Werte
+sgcraft.gui.configurator.label.secondsToStayOpen=Maximale Öffnungszeit in Sekunden
+sgcraft.gui.configurator.label.gateRotationSpeed=Tordrehungs Geschwindigkeit
+sgcraft.gui.configurator.label.energyBufferSize=Größe des Energiepuffers
+sgcraft.gui.configurator.label.energyPerNaquadah=Energie pro Naquadah
+sgcraft.gui.configurator.label.openingsPerNaquadah=Öffnungen pro Naquadah
+sgcraft.gui.configurator.label.distanceFactorMultiplier=Entfernungsfaktor-Multiplikator
+sgcraft.gui.configurator.label.interDimensionalMultiplier=Interdimensionaler Multiplikator
+sgcraft.gui.configurator.label.accessControlSystems=Zugriffskontrollsystem
+sgcraft.gui.configurator.label.booleanValue=Boolesche Werte
+sgcraft.gui.configurator.label.oneWayTravelOnly=Nur Hinreise
+sgcraft.gui.configurator.label.irisUpgrade=Iris Upgrade
+sgcraft.gui.configurator.label.chevronUpgrade=Chevron Upgrade
+sgcraft.gui.configurator.label.pegasusGateType=Pegasus Tor Model
+sgcraft.gui.configurator.label.reverseWormholeKills=Umgekehrtes Wurmloch tötet
+sgcraft.gui.configurator.label.closeFromEitherEnd=Schießen von beiden Seiten
+sgcraft.gui.configurator.label.preserveInventoryOnDeath=Inventar bei Tod durch Iris aufbewahren
+sgcraft.gui.configurator.label.noInputPowerRequired=Keine Energieeingang erforderlich
+sgcraft.gui.configurator.label.chevronsLockOnDial=Chevrons fixiert beim wählen
+sgcraft.gui.configurator.label.returnToPreviousIrisState=Iris Status zurücksetzen
+sgcraft.gui.configurator.label.transientDamage=Vortex Schaden (wenn Wurmloch geöffnet wird)
+sgcraft.gui.configurator.label.eventHorizonTransparency=Event Horizont transparent
+sgcraft.gui.configurator.label.dhdAsFuelSource=Benutze DHD als Energiequelle
+sgcraft.gui.configurator.label.allowRedstoneOutput=Erlaube Redstone Output
+sgcraft.gui.configurator.label.allowRedstoneInput=Erlaube Redstone Input (zur Iris Kontrolle)
+sgcraft.gui.configurator.label.horizontalGate=Horizontales Tor
+sgcraft.gui.configurator.label.renderFaceUp=Ausrichtung nach Oben
+sgcraft.gui.configurator.label.renderFaceDown=Ausrichtung nach Unten
+sgcraft.gui.configurator.label.gateAddress=Toradresse
+sgcraft.gui.configurator.label.gateAddressAccessList=Toradressen Zugriffsliste
+sgcraft.gui.configurator.label.addressList=Adressliste
+sgcraft.gui.configurator.label.perAddressOptions=Adressspezifische Optionen
+sgcraft.gui.configurator.label.allow=Erlauben
+sgcraft.gui.configurator.label.deny=Verweigern
+sgcraft.gui.configurator.label.incoming=Eingehend
+sgcraft.gui.configurator.label.outgoing=Ausgehend
+sgcraft.gui.configurator.label.defaultIncoming=Standart Eingehend
+sgcraft.gui.configurator.label.defaultOutgoing=Standart Ausgehend
+sgcraft.gui.configurator.label.address=Adresse
+sgcraft.gui.configurator.label.addGateAddress=Toradresse hinzufügen
+sgcraft.gui.configurator.label.editGateAddress=Toradresse bearbeiten
+sgcraft.gui.configurator.label.deleteGateAddress=Toradresse löschen
+sgcraft.gui.configurator.label.format=Format
+sgcraft.gui.configurator.label.playerName=Spielername
+sgcraft.gui.configurator.label.addPlayer=Spieler hinzufügen
+sgcraft.gui.configurator.label.editPlayer=Spieler bearbeiten
+sgcraft.gui.configurator.label.deletePlayer=Spieler löschen
+sgcraft.gui.configurator.label.playerAccessList=Spieler Zugriffsliste
+sgcraft.gui.configurator.label.playerList=Spielerliste
+sgcraft.gui.configurator.label.options=Optionen
+sgcraft.gui.configurator.label.defaultAccess=Standart Zugriff
+sgcraft.gui.configurator.label.defaultIris=Standart Iriszugriff
+sgcraft.gui.configurator.label.defaultAdmin=Standart Adminzugriff
+sgcraft.gui.configurator.label.access=Zugriff
+sgcraft.gui.configurator.label.iris=Iris
+sgcraft.gui.configurator.label.admin=Admin
+sgcraft.gui.pdd.label.personalDialerDevice=Personal Dialer Device
+sgcraft.gui.pdd.label.availableAddresses=Verfügbare Adressen
+sgcraft.gui.pdd.label.warning=PDD nicht schließen, bis das Wurmloch verbunden ist
+sgcraft.gui.pdd.label.nameHere=Name hier
+sgcraft.gui.pdd.label.addressHere=Adresse hier
+sgcraft.gui.pdd.label.noLocalStargateFound=Kein Stargate in der Nähe gefunden
+sgcraft.gui.pdd.label.dialling=... Wähle ...
+sgcraft.gui.pdd.label.disconnecting=... Schließe ...
+sgcraft.gui.pdd.label.connected=... Verbunden ...
+sgcraft.gui.pdd.label.error=... Fehler ...
+sgcraft.gui.pdd.label.establishing=... Verbinde ...
+sgcraft.gui.pdd.label.pddEntry=PDD Eintrag
+sgcraft.gui.pdd.label.addPddEntry=Füge PDD Eintrag hinzu
+sgcraft.gui.pdd.label.editPddEntry=Bearbeite PDD Eintrag
+sgcraft.gui.pdd.label.deletePddEntry=Lösche PDD Eintrag
+sgcraft.gui.pdd.label.name=Name
+sgcraft.gui.pdd.label.address=Adresse
+sgcraft.gui.pdd.label.index=Index
+sgcraft.gui.gdo.label.gdoController=GDO Regler
+sgcraft.gui.gdo.label.localGateControl=Lokale Torkontrolle
+sgcraft.gui.gdo.label.remoteGateControl=Entfernte Torkontrolle
+
+sgcraft.gui.zpmConsole.label.availablePower=Verfügbare Energie
