(hopefully) final update for the german language file
in cooperation with @Matthew#0294

--- a/src/resources/assets/sgcraft/lang/de_DE.lang
+++ b/src/resources/assets/sgcraft/lang/de_DE.lang
@@ -71,24 +71,24 @@ sgcraft.gui.button.loadDefaults=Lade Standartwerte
 sgcraft.gui.button.delete=Löschen
 sgcraft.gui.button.save=Speichern
 sgcraft.gui.button.close=Schließen
-sgcraft.gui.button.openIris=Iris öffnen
-sgcraft.gui.button.closeIris=Iris schließen
+sgcraft.gui.button.openIris=Öffnen
+sgcraft.gui.button.closeIris=Schließen
 sgcraft.gui.button.reset=Zurücksetzen
-sgcraft.gui.button.dialSelectedAddress=Gewählte Adresse wählen
-sgcraft.gui.button.disconnect=Verbindung Trennen
+sgcraft.gui.button.dialSelectedAddress=Markierte Adresse wählen
+sgcraft.gui.button.disconnect=Trennen
 
 sgcraft.gui.configurator.label.configurator=Konfigurator
 sgcraft.gui.configurator.label.numericValues=Numerische Werte
-sgcraft.gui.configurator.label.secondsToStayOpen=Maximale Öffnungszeit in Sekunden
+sgcraft.gui.configurator.label.secondsToStayOpen=Maximale Öffnungszeit in Sek
 sgcraft.gui.configurator.label.gateRotationSpeed=Tordrehungs Geschwindigkeit
 sgcraft.gui.configurator.label.energyBufferSize=Größe des Energiepuffers
 sgcraft.gui.configurator.label.energyPerNaquadah=Energie pro Naquadah
 sgcraft.gui.configurator.label.openingsPerNaquadah=Öffnungen pro Naquadah
 sgcraft.gui.configurator.label.distanceFactorMultiplier=Entfernungsfaktor-Multiplikator
-sgcraft.gui.configurator.label.interDimensionalMultiplier=Interdimensionaler Multiplikator
+sgcraft.gui.configurator.label.interDimensionalMultiplier=Interdimensionaler-Multiplikator
 sgcraft.gui.configurator.label.accessControlSystems=Zugriffskontrollsystem
 sgcraft.gui.configurator.label.booleanValue=Boolesche Werte
-sgcraft.gui.configurator.label.oneWayTravelOnly=Nur Hinreise
+sgcraft.gui.configurator.label.oneWayTravelOnly=Reise nur in eine Richtung
 sgcraft.gui.configurator.label.irisUpgrade=Iris Upgrade
 sgcraft.gui.configurator.label.chevronUpgrade=Chevron Upgrade
 sgcraft.gui.configurator.label.pegasusGateType=Pegasus Tor Model
@@ -98,20 +98,20 @@ sgcraft.gui.configurator.label.preserveInventoryOnDeath=Inventar bei Tod durch I
 sgcraft.gui.configurator.label.noInputPowerRequired=Keine Energieeingang erforderlich
 sgcraft.gui.configurator.label.chevronsLockOnDial=Chevrons fixiert beim wählen
 sgcraft.gui.configurator.label.returnToPreviousIrisState=Iris Status zurücksetzen
-sgcraft.gui.configurator.label.transientDamage=Vortex Schaden (wenn Wurmloch geöffnet wird)
+sgcraft.gui.configurator.label.transientDamage=Vortex Schaden (beim Wurmloch öffnen)
 sgcraft.gui.configurator.label.eventHorizonTransparency=Event Horizont transparent
 sgcraft.gui.configurator.label.dhdAsFuelSource=Benutze DHD als Energiequelle
 sgcraft.gui.configurator.label.allowRedstoneOutput=Erlaube Redstone Output
-sgcraft.gui.configurator.label.allowRedstoneInput=Erlaube Redstone Input (zur Iris Kontrolle)
-sgcraft.gui.configurator.label.horizontalGate=Horizontales Tor
-sgcraft.gui.configurator.label.renderFaceUp=Ausrichtung nach Oben
-sgcraft.gui.configurator.label.renderFaceDown=Ausrichtung nach Unten
+sgcraft.gui.configurator.label.allowRedstoneInput=Erlaube Redstone Input (Iriskontrolle)
+sgcraft.gui.configurator.label.horizontalGate=Horizontale Ausrichtung des Tores
+sgcraft.gui.configurator.label.renderFaceUp=nach oben
+sgcraft.gui.configurator.label.renderFaceDown=nach unten
 sgcraft.gui.configurator.label.gateAddress=Toradresse
 sgcraft.gui.configurator.label.gateAddressAccessList=Toradressen Zugriffsliste
 sgcraft.gui.configurator.label.addressList=Adressliste
 sgcraft.gui.configurator.label.perAddressOptions=Adressspezifische Optionen
-sgcraft.gui.configurator.label.allow=Erlauben
-sgcraft.gui.configurator.label.deny=Verweigern
+sgcraft.gui.configurator.label.allow=Ja
+sgcraft.gui.configurator.label.deny=Nein
 sgcraft.gui.configurator.label.incoming=Eingehend
 sgcraft.gui.configurator.label.outgoing=Ausgehend
 sgcraft.gui.configurator.label.defaultIncoming=Standart Eingehend
@@ -128,15 +128,15 @@ sgcraft.gui.configurator.label.deletePlayer=Spieler löschen
 sgcraft.gui.configurator.label.playerAccessList=Spieler Zugriffsliste
 sgcraft.gui.configurator.label.playerList=Spielerliste
 sgcraft.gui.configurator.label.options=Optionen
-sgcraft.gui.configurator.label.defaultAccess=Standart Zugriff
-sgcraft.gui.configurator.label.defaultIris=Standart Iriszugriff
-sgcraft.gui.configurator.label.defaultAdmin=Standart Adminzugriff
+sgcraft.gui.configurator.label.defaultAccess=Zugriff Standart
+sgcraft.gui.configurator.label.defaultIris=Zugriff Iris
+sgcraft.gui.configurator.label.defaultAdmin=Zugriff Admin
 sgcraft.gui.configurator.label.access=Zugriff
 sgcraft.gui.configurator.label.iris=Iris
 sgcraft.gui.configurator.label.admin=Admin
 sgcraft.gui.pdd.label.personalDialerDevice=Personal Dialer Device
 sgcraft.gui.pdd.label.availableAddresses=Verfügbare Adressen
-sgcraft.gui.pdd.label.warning=PDD nicht schließen, bis das Wurmloch verbunden ist
+sgcraft.gui.pdd.label.warning=PDD schließen bricht Wahlvorgang ab
 sgcraft.gui.pdd.label.nameHere=Name hier
 sgcraft.gui.pdd.label.addressHere=Adresse hier
 sgcraft.gui.pdd.label.noLocalStargateFound=Kein Stargate in der Nähe gefunden
@@ -144,7 +144,7 @@ sgcraft.gui.pdd.label.dialling=... Wähle ...
 sgcraft.gui.pdd.label.disconnecting=... Schließe ...
 sgcraft.gui.pdd.label.connected=... Verbunden ...
 sgcraft.gui.pdd.label.error=... Fehler ...
-sgcraft.gui.pdd.label.establishing=... Verbinde ...
+sgcraft.gui.pdd.label.establishing=... Wähle ...
 sgcraft.gui.pdd.label.pddEntry=PDD Eintrag
 sgcraft.gui.pdd.label.addPddEntry=Füge PDD Eintrag hinzu
 sgcraft.gui.pdd.label.editPddEntry=Bearbeite PDD Eintrag
@@ -153,7 +153,7 @@ sgcraft.gui.pdd.label.name=Name
 sgcraft.gui.pdd.label.address=Adresse
 sgcraft.gui.pdd.label.index=Index
 sgcraft.gui.gdo.label.gdoController=GDO Regler
-sgcraft.gui.gdo.label.localGateControl=Lokale Torkontrolle
-sgcraft.gui.gdo.label.remoteGateControl=Entfernte Torkontrolle
+sgcraft.gui.gdo.label.localGateControl=Lokale Iriskontrolle
+sgcraft.gui.gdo.label.remoteGateControl=Entfernte Iriskontrolle
 
 sgcraft.gui.zpmConsole.label.availablePower=Verfügbare Energie
