Fix "Dialling" dialing, whatever....
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/de_DE.lang
+++ b/src/resources/assets/sgcraft/lang/de_DE.lang
@@ -140,7 +140,7 @@ sgcraft.gui.pdd.label.warning=PDD schließen bricht Wahlvorgang ab
 sgcraft.gui.pdd.label.nameHere=Name hier
 sgcraft.gui.pdd.label.addressHere=Adresse hier
 sgcraft.gui.pdd.label.noLocalStargateFound=Kein Stargate in der Nähe gefunden
-sgcraft.gui.pdd.label.dialling=... Wähle ...
+sgcraft.gui.pdd.label.dialing=... Wähle ...
 sgcraft.gui.pdd.label.disconnecting=... Schließe ...
 sgcraft.gui.pdd.label.connected=... Verbunden ...
 sgcraft.gui.pdd.label.error=... Fehler ...
