--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -27,7 +27,7 @@ message.sgcraft:irisAtDestination=Destination blocked by iris
 message.sgcraft:incomingConnection=Connection initiated from other end
 message.sgcraft:selfBusy=Stargate is busy
 message.sgcraft:targetBusy=Stargate at address %s is busy
-message.sgcraft:selfOutOfRange=Coordinates of dialling stargate are out of range
+message.sgcraft:selfOutOfRange=Coordinates of dialing stargate are out of range
 message.sgcraft:targetOutOfRange=Coordinates out of stargate range
 message.sgcraft:unknownAddress=Unable to find stargate at address %s
 message.sgcraft:selfLackChevrons=Stargate has insufficient chevrons to dial %s
@@ -140,7 +140,7 @@ sgcraft.gui.pdd.label.warning=Don't close PDD until wormhole connects...
 sgcraft.gui.pdd.label.nameHere=Name Here
 sgcraft.gui.pdd.label.addressHere=Address Here
 sgcraft.gui.pdd.label.noLocalStargateFound=No Local Stargate Found
-sgcraft.gui.pdd.label.dialling=... Dialling ...
+sgcraft.gui.pdd.label.dialing=... Dialing ...
 sgcraft.gui.pdd.label.disconnecting=... Disconnecting ...
 sgcraft.gui.pdd.label.connected=... Connected ...
 sgcraft.gui.pdd.label.error=... Error ...
