--- a/src/resources/assets/sgcraft/lang/de_DE.lang
+++ b/src/resources/assets/sgcraft/lang/de_DE.lang
@@ -16,6 +16,7 @@ item.sgcraft:sgControllerCrystal.name=Stargate Kontrollkristall
 item.sgcraft:sgChevronUpgrade.name=Stargate Chevron Erweiterung
 item.sgcraft:sgIrisUpgrade.name=Stargate Iris Erweiterung
 item.sgcraft:sgIrisBlade.name=Stargate Iris Segment
+item.sgcraft:sgPegasusUpgrade.name=Stargate Pegasus Typ Erweiterung
 item.sgcraft:ic2Capacitor.name=Lächerlich großer Speicher
 death.attack.sgcraft:transient=%1$s wurde vom Ereignishorizont in Stücke gerissen.
 death.attack.sgcraft:iris=%1$s ist an einer Stargate Iris zermatscht.
