--- a/src/resources/assets/sgcraft/lang/de_DE.lang
+++ b/src/resources/assets/sgcraft/lang/de_DE.lang
@@ -16,7 +16,6 @@ item.sgcraft:sgControllerCrystal.name=Stargate Kontrollkristall
 item.sgcraft:sgChevronUpgrade.name=Stargate Chevron Erweiterung
 item.sgcraft:sgIrisUpgrade.name=Stargate Iris Erweiterung
 item.sgcraft:sgIrisBlade.name=Stargate Iris Segment
-item.sgcraft:sgPegasusUpgrade.name=Stargate Pegasus Typ Erweiterung
 item.sgcraft:ic2Capacitor.name=Lächerlich großer Speicher
 death.attack.sgcraft:transient=%1$s wurde vom Ereignishorizont in Stücke gerissen.
 death.attack.sgcraft:iris=%1$s ist an einer Stargate Iris zermatscht.
@@ -158,3 +157,5 @@ sgcraft.gui.gdo.label.localGateControl=Lokale Iriskontrolle
 sgcraft.gui.gdo.label.remoteGateControl=Entfernte Iriskontrolle
 
 sgcraft.gui.zpmConsole.label.availablePower=Verfügbare Energie
+
+item.sgcraft:pegasus_upgrade.name=Stargate Pegasus Typ Erweiterung
