adjusted lang files

--- a/src/resources/assets/sgcraft/lang/de_DE.lang
+++ b/src/resources/assets/sgcraft/lang/de_DE.lang
@@ -158,4 +158,4 @@ sgcraft.gui.gdo.label.remoteGateControl=Entfernte Iriskontrolle
 
 sgcraft.gui.zpmConsole.label.availablePower=Verfügbare Energie
 
-item.sgcraft:pegasus_upgrade.name=Stargate Pegasus Typ Erweiterung
+item.sgcraft:pegasus_upgrade.name=Pegasus Typ Erweiterungskristall
