--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -158,4 +158,4 @@ sgcraft.gui.gdo.label.remoteGateControl=Remote Gate Control
 
 sgcraft.gui.zpmConsole.label.availablePower=Available Power
 
-item.sgcraft:pegasus_upgrade.name=Stargate Pegasus Type Upgrade
+item.sgcraft:pegasus_upgrade.name=Pegasus Type Upgrade Crystal
