--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -56,6 +56,7 @@ message.sgcraft:accessSystemDeniedOrigin=Unable to dial destination, gate addres
 message.sgcraft:changesSaved=Changes Saved!
 message.sgcraft:gateLocationSaved=Gate location saved in configurator!
 message.sgcraft:configuratorLink=Link to Stargate created!
+message.sgcraft:playerAccessToDenied=Insufficient player access permission at destination
 
 tile.sgcraft:zpm_interface_cart.name=ZPM Interface Cart
 tile.sgcraft:zpm_console.name=ZPM Console
