Fixed / Added: - fixed blocks not being damaged within certain event horizons - added the ability to block a players ability to destroy gates - started work on Zpm Module hub - fixed transient damage being too low
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -135,6 +135,7 @@ sgcraft.gui.configurator.label.defaultAdmin=Default Admin
 sgcraft.gui.configurator.label.access=Access
 sgcraft.gui.configurator.label.iris=Iris
 sgcraft.gui.configurator.label.admin=Admin
+sgcraft.gui.configurator.label.playerCanDestroyGate=Player can destroy stargate
 sgcraft.gui.pdd.label.personalDialerDevice=Personal Dialer Device
 sgcraft.gui.pdd.label.availableAddresses=Available Addresses
 sgcraft.gui.pdd.label.warning=Don't close PDD until wormhole connects...
