Implemented the ability to hide the gate address from the player.
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/src/resources/assets/sgcraft/lang/en_US.lang
+++ b/src/resources/assets/sgcraft/lang/en_US.lang
@@ -47,6 +47,7 @@ message.sgcraft:configuratorPermission=Insufficient permissions.  Requires 'sgcr
 message.sgcraft:pddPermission=Insufficient permissions.  Requires 'sgcraft.gui.pdd
 message.sgcraft:cantFindStargate=Could not detect Stargate near current position
 message.sgcraft:pddContainsAddress=PDD already contains this address
+message.sgcraft:gateAddressHidden=Cannot add hidden gate address to a PDD
 message.sgcraft:invalidFormat=Invalid format
 message.sgcraft:insufficientGateAccessPermission=Insufficient gate access permission
 message.sgcraft:insufficientPlayerAdminAccessPermission=Insufficient player admin access permission
@@ -137,6 +138,7 @@ sgcraft.gui.configurator.label.access=Access
 sgcraft.gui.configurator.label.iris=Iris
 sgcraft.gui.configurator.label.admin=Admin
 sgcraft.gui.configurator.label.playerCanDestroyGate=Player can destroy stargate
+sgcraft.gui.configurator.label.displayGateAddress=Display Gate Address
 sgcraft.gui.pdd.label.personalDialerDevice=Personal Dialer Device
 sgcraft.gui.pdd.label.availableAddresses=Available Addresses
 sgcraft.gui.pdd.label.warning=Don't close PDD until wormhole connects...
